# get-up

./: .gitignore  README.md
.github/workflows/: ci.yml  cleanup-caches.yml  daily.yml  sync-deepml.yml
docs/: get-up-rust.md
rust-leetcode-daily/: .env.example  .gitignore  Cargo.toml  README.md
rust-leetcode-daily/.github/workflows/: daily.yml
rust-leetcode-daily/data/: deepml_problems.txt  leetcode_easy.txt  leetcode_hard.txt  leetcode_medium.txt  used_problems.txt
rust-leetcode-daily/docs/: README.md  api-reference.md  architecture.md  deployment.md  development.md  faq.md  getting-started.md
rust-leetcode-daily/src/: api.rs  config.rs  leetcode.rs  lib.rs  main.rs  message.rs  routine.rs  types.rs  utils.rs
rust-leetcode-daily/src/mcp/: mod.rs
rust-leetcode-daily/src/notification/: discord.rs  mod.rs  telegram.rs
rust-leetcode-daily/src/providers/: deepml.rs  leetcode.rs
rust-routine-daily/: Cargo.toml  DESIGN.md  README.md
rust-routine-daily/docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  faq.md  getting-started.md
rust-routine-daily/src/: api.rs  config.rs  format.rs  main.rs  message.rs  scheduler.rs  serialization.rs
rust-routine-daily/src/mcp/: mod.rs
rust-routine-daily/src/notification/: mod.rs
rust-routine-daily/src/providers/: deepml.rs  mod.rs
