[package]
name = "leetcode-daily"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool for daily motivational messages with LeetCode problems"
authors = ["Muhammad"]

[dependencies]
# HTTP & JSON
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Dates & Timezones
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Random & Utils
rand = "0.8"
anyhow = "1.0"
dotenvy = "0.15"

# GitHub API
octocrab = "0.39"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Notification - Telegram
teloxide = { version = "0.12", optional = true }

# Notification - Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

# Parquet for Running Stats
polars = { version = "0.42", features = ["parquet", "lazy"] }

# Async trait
async-trait = "0.1"

[features]
default = []
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]

[[bin]]
name = "leetcode-daily"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
