[package]
name = "leetcode-daily"
version = "0.2.0"
edition = "2021"
description = "A Rust CLI tool and MCP server for daily motivational messages with LeetCode problems"
authors = ["Muhammad"]

[lib]
name = "leetcode_daily"
path = "src/lib.rs"

[dependencies]
# HTTP & JSON
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Dates & Timezones
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Random & Utils
rand = "0.8"
anyhow = "1.0"
dotenvy = "0.15"

# GitHub API
octocrab = "0.39"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Notification - Telegram
teloxide = { version = "0.12", optional = true }

# Notification - Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

# Parquet for Running Stats
polars = { version = "0.42", features = ["parquet", "lazy"] }

# Async trait
csv = "1.3"
async-trait = "0.1"

# MCP Server
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"], optional = true }
schemars = { version = "1.0", optional = true }

# HTTP server for MCP streamable HTTP transport
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }

[features]
default = []
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]
mcp = ["dep:rmcp", "dep:schemars", "dep:axum", "dep:tower"]

[[bin]]
name = "leetcode-daily"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
